samples/_failures_safe/1761087896_82bb9e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b77db94e.c: In function ‘main’:
./samples/SAFE/__tmp_b77db94e.c:159:21: error: ‘st’ undeclared (first use in this function)
  159 |             fprintf(st
      |                     ^~
./samples/SAFE/__tmp_b77db94e.c:159:21: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_b77db94e.c:159:23: error: expected ‘)’ at end of input
  159 |             fprintf(st
      |                    ~  ^
      |                       )
./samples/SAFE/__tmp_b77db94e.c:159:13: error: too few arguments to function ‘fprintf’
  159 |             fprintf(st
      |             ^~~~~~~
In file included from /usr/include/stdio.h:980,
                 from ./samples/SAFE/__tmp_b77db94e.c:2:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:77:1: note: declared here
   77 | fprintf (FILE *__restrict __stream, const char *__restrict __fmt, ...)
      | ^~~~~~~
./samples/SAFE/__tmp_b77db94e.c:159:13: error: expected declaration or statement at end of input
  159 |             fprintf(st
      |             ^~~~~~~
./samples/SAFE/__tmp_b77db94e.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b77db94e.c:159:13: error: expected declaration or statement at end of input
